--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.17.2",
-    "mysql2": "^3.1.2"
+    "express": "^4.19.1",
+    "mysql2": "^3.9.2"
   },
   "keywords": [],
-  "description": ""
+  "description": "An app that has full functionality of create, read, update, and delete. Using MySql relational database."
 }
